styles.css
@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');

li, a, button, p {
    font-family: "Montserrat", sans-serif;
    font-weight: 500;
    font-size: 16px;
    color: #edf0f1;
    text-decoration: none;
}

header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 30px 10%;
    background-color: rgba(0, 0, 0, 0.6);
}

.logo {
    cursor: pointer;
}

.nav_links {
    list-style: none;
}

.nav_links li {
    display: inline-block;
    padding: 0px 20px;
}

.nav_links li a {
    transition: all 0.3s ease 0s;
}

.nav_links li a:hover {
    color: #ff99ff;
}

button {
    padding: 9px 25px;
    background-color: rgba(0, 136, 169, 1);
    border: none;
    border-radius: 50px;
    cursor: pointer;
    transition: all 0.3s ease 0s;
}

button:hover {
    background-color: rgba(0, 136, 169, 0.8);
}

.AboutMe {
    text-align: center;
    background-color: rgba(0, 0, 0, 0.6);
}

body {
    background: url("images/HadesScreenshot.png");
    background-size: cover;
}

h1 {
    font-family: "Monsterrat", sans-serif;
    color: #edf0f1;
}

a:hover {
    color: #ff99ff;
}

.Projects {
    text-align: center;
    background-color: rgba(0, 0, 0, 0.6);
}

.About {
    text-align: center;
    background-color: rgba(0, 0, 0, 0.6);
}

